<resources>
    <string name="app_name">初小丁</string>

    <string name="code">请输入验证码</string>
    <string name="code_get">点击获取</string>
    <string name="code_wait">%1$s秒后获取</string>
    <string name="loading">请稍候...</string>
    <string name="network_fail">网络连接失败</string>

    <string name="login">登&#160;&#160;录</string>
    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_notice_hint">请同意相关条款</string>
    <string name="login_vai_hint">请输入正确的手机号码</string>
    <string name="login_used_hint">该手机号已经被注册</string>

    <string name="login_succee">登陆成功</string>
    <string name="login_falid">登陆失败</string>
    <string name="logout">授权过期,正在注销...</string>

    <string name="forget_pwd_hint">请输入新密码</string>
    <string name="forget_pwd_hint2">请确认新密码</string>
    <string name="forget_pwd_check">两次密码不一致</string>
    <string name="submit">确&#160;&#160;认</string>
    <string name="finish">完&#160;&#160;成</string>
    <string name="goindex">去首页</string>

    <string name="register">确认注册</string>
    <string name="register_check"><Data><![CDATA[同意<font color="#4F94CD">"服务条款"</font>和<font color="#4F94CD">"网络隐私保护权利"</font>]]></Data></string>
    <string name="register_userinfo_notice">以下填写的个人详细信息资料，本公司绝对保证保密，不对外泄漏，如有任何疑问，请及时与我们联系，客服电话 400-901-1326</string>
    <string name="register_locing">正在定位...</string>
    <string name="register_userinfo_city">请选择所在城市</string>
    <string name="register_userinfo_name">请输入您的真实姓名</string>
    <string name="register_userinfo_card">请输入您的真实银行卡号</string>

    <string name="register_result_success">恭喜你，注册成功！</string>
    <string name="register_result_faild">抱歉，注册失败！</string>
    <string name="register_result_notice">我们将在两个工作日内，审核您的个人信息，如核实内容真实有效，则可确认注册成功，您即可接单，请耐心等待，谢谢！</string>

    <string name="main_tab01">首页</string>
    <string name="main_tab02">我的</string>


    <string name="today_order">今日接单</string>
    <string name="today_money">我的收入</string>

    <string name="per_account">帐号管理</string>
    <string name="per_order">我的订单</string>
    <string name="per_bill">我的账单</string>
    <string name="per_setting">设置</string>

    <!--个人中心-->
    <string name="per_icon">头像</string>
    <string name="per_username">用户名</string>
    <string name="per_name">姓名</string>
    <string name="per_name_title">修改姓名</string>
    <string name="per_card">卡号</string>
    <string name="per_card_title">修改卡号</string>
    <string name="per_add">地址</string>
    <string name="per_add_title">修改地址</string>
    <string name="per_logout">注&#160;&#160;销</string>

    <string name="route_failt">生成路线失败</string>
    <string name="route_finish">路线绘制完成</string>

    <!--订单列表-->
    <string name="order_noremark">无备注</string>

    <!--xlistview-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_refreshing">正在刷新&#820;</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
