<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/toolbar_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:background="@color/page_bg_gray"
        >
        <EditText
            android:id="@+id/forget_name_edit"
            style="@style/register_edit"
            android:hint="@string/login_phone_hint"
            android:inputType="number"
            />

        <LinearLayout
            style="@style/register_edit"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <EditText
                android:id="@+id/forget_code_edit"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/code"
                android:background="@null"
                android:inputType="number"
                />
            <TextView
                android:id="@+id/forget_getcode_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_get"
                android:textColor="@color/orange"
                />
        </LinearLayout>
        <EditText
            android:id="@+id/forget_pwd_edit"
            style="@style/register_edit"
            android:hint="@string/forget_pwd_hint"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/forget_pwd2_edit"
            style="@style/register_edit"
            android:hint="@string/forget_pwd_hint2"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/forget_btn"
            style="@style/base_btn"
            android:text="@string/submit" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>