<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/toolbar_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:background="@color/page_bg_gray"
        >
        <com.bigkoo.convenientbanner.ConvenientBanner
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/register_banner"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:canLoop="true"
        />
        <EditText
            android:id="@+id/register_name_txt"
            style="@style/register_edit"
            android:text="@string/login_phone_hint"
            />
        <EditText
            android:id="@+id/register_pwd_txt"
            style="@style/register_edit"
            android:text="@string/login_pwd_hint"
            />
        <EditText
            android:id="@+id/register_code_txt"
            style="@style/register_edit"
            android:text="@string/code"
            />

        <CheckBox
            android:id="@+id/register_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:checked="true"
            android:text="记住密码"
             />
        <Button
            android:id="@+id/register_registe_btn"
            android:layout_below="@id/login_base_view"
            style="@style/base_btn"
            android:text="@string/register" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>