<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/toolbar_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:background="@color/page_bg_gray"
        >
        <LinearLayout
            android:id="@+id/person_info_icon_lin"
            style="@style/per_info_lin"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp16"
                android:textColor="@color/black"
                android:text="头像"
                 />

            <ImageView
                android:id="@+id/person_info_icon_img"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@mipmap/icon_user_default"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray03"/>
        <LinearLayout
            android:id="@+id/person_info_account_lin"
            style="@style/per_info_lin"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp16"
                android:textColor="@color/black"
                android:text="@string/per_username"
                 />
            <TextView
                android:id="@+id/person_info_account_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp16"
                android:gravity="center_vertical|right"
                android:hint="@string/per_username"

                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray03"/>
        <LinearLayout
            android:id="@+id/person_info_name_lin"
            style="@style/per_info_lin"
            >
            <TextView
                style="@style/per_info_txt"
                android:text="@string/per_name"
                />
            <TextView
                android:id="@+id/person_info_name_txt"
                style="@style/per_info_txt2"
                android:hint="@string/per_name"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/person_info_card_lin"
            style="@style/per_info_lin"
            >
            <TextView
                style="@style/per_info_txt"
                android:text="@string/per_card"
                />
            <TextView
                android:id="@+id/person_info_card_txt"
                style="@style/per_info_txt2"
                android:hint="@string/per_card"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/person_info_add_lin"
            style="@style/per_info_lin"
            >
            <TextView
                style="@style/per_info_txt"
                android:text="@string/per_add"
                />
            <TextView
                android:id="@+id/person_info_add_txt"
                style="@style/per_info_txt2"
                android:hint="@string/per_add"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray03"/>

        <Button
            style="@style/base_btn"
            android:text="@string/per_logout" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>